# 3dgraphicsengine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  buildspec.yml  configure.sh  template.yaml  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cmake/: 3DEngine-config.cmake.in  3Dgraphicsengine-config.cmake.in  3dgraphicsengine-config.cmake.in
cmake/toolchains/: ubuntu.cmake
docker/linux/: docker-build.sh  docker-container-start.sh  docker-exec.sh
docker/windows/: docker-build.bat  docker-container-start.bat  docker-exec.bat  docker-setup.bat
docs/: DESIGN_DOC.md
examples/: CMakeLists.txt
examples/2D/: 2D.cpp  CMakeLists.txt
examples/CharacterController/: CMakeLists.txt  CharacterController.cpp
examples/LoadModel/: CMakeLists.txt  LoadModel.cpp
examples/RigidBody/: CMakeLists.txt  RigidBody.cpp
examples/ShaderArt/: CMakeLists.txt  ShaderArt.cpp
examples/ShaderArt/shaders/: background_fragment.glsl  background_vertex.glsl
examples/SimpleCube/: CMakeLists.txt  SimpleCube.cpp
include/Engine/: Camera.h  Clock.h  DebugWindow.h  Engine.h  InputManager.h  Light.h  Object3D.h  Physics.h  Renderer.h  Shader.h
include/Engine/ECS/: Mesh.h
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/include/: Logger.h
src/Core/src/: Logger.cpp
src/ECS/: CMakeLists.txt
src/ECS/include/: ECS.h  Mesh.h  Shader.h  Texture.h
src/ECS/src/: ECS.cpp  Mesh.cpp  MeshInstances.cpp  Model.cpp  Shader.cpp
src/Engine/: CMakeLists.txt  Clock.cpp  Renderer.cpp  SquareMesh.cpp
src/Engine/Core/: CMakeLists.txt
src/Engine/Core/include/: LoadImage.h  Timer.h  Types.h
src/Engine/Core/src/: LoadImage.cpp  Timer.cpp
src/Engine/ECS/: CMakeLists.txt  Mesh.cpp
src/Engine/ECS/include/: ECS.h  Mesh.h  MeshInstances.h  Model.h
src/Engine/Mesh/: CMakeLists.txt
src/Engine/Mesh/include/: SquareMesh.h
src/Engine/Mesh/src/: CubeMesh.cpp
src/Engine/Texture/: CMakeLists.txt
src/Engine/Texture/include/: Texture.h  Texture2D.h  TextureCubeMap.h
src/Engine/Texture/src/: DepthTexture.cpp  Texture.cpp  Texture2D.cpp
src/Engine/include/: DynamicCharacterController.h  Engine.h  InputManager.h  Object3D.h  Physics.h  Renderer.h  Rigidbody.h
src/Engine/src/: Camera.cpp  Clock.cpp  DebugWindow.cpp  DynamicCharacterController.cpp  Engine.cpp  InputManager.cpp  Light.cpp  Object3D.cpp  Physics.cpp  Renderer.cpp  Rigidbody.cpp  Shader.cpp
src/Mesh/: CMakeLists.txt
src/Mesh/include/: CubeMesh.h
src/Mesh/src/: CubeMesh.cpp  SquareMesh.cpp
src/Texture/: CMakeLists.txt
src/Texture/include/: DepthTexture.h  Texture2D.h
src/Texture/src/: TextureCubeMap.cpp
